# ama-riscv-perfsim

./: .gitattributes  .gitignore  README.md
SW/: CMakeLists.txt  CMakeSettings.json
SW/include/: cl.h  control.h  core.h  cpu.h  decoder.h  defines.h  inst_field.h  interfaces.h  intf.h  intf_cfg.h  logic_t.h  memory.h  modules.h  op_fwd.h  perf_cpu.h  reg_file.h  seq_queue.h  vector_export.h
SW/src/: CMakeLists.txt  cl.cpp  control.cpp  core.cpp  cpu.cpp  decoder.cpp  inst_field.cpp  intf_cfg.cpp  logic_t.cpp  main.cpp  memory.cpp  modules.cpp  op_fwd.cpp  perf_cpu.cpp  reg_file.cpp  seq_queue.cpp  vector_export.cpp
SW/tests/: CMakeLists.txt  Hello_test.cpp
riscv-tests/sanity/: Makefile.main
riscv-tests/sanity/asm_test/: Makefile  asm_test.ld  crt0.s
